# rt

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: build.yaml  publish.yaml
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  window.json
src-tauri/src/: api.rs  chat.rs  emote.rs  emotes.rs  feed.rs  feeds.rs  lib.rs  main.rs  migration.rs  proxy.rs  queries.rs  user.rs  users.rs  util.rs  utils.rs  window.rs
src-tauri/src/twitch/: chat.rs  emote.rs  main.rs  mod.rs  proxy.rs  queries.rs  stream.rs  user.rs
src-tauri/src/youtube/: channel.rs  main.rs  mod.rs  user.rs  video.rs
src/lib/: Chat.svelte.js  Chat.svelte.ts  Emotes.svelte.js  Emotes.svelte.ts  Events.ts  Stores.svelte.ts  Stream.svelte.js  Stream.svelte.ts  Types.ts  Users.svelte.js  Users.svelte.ts  Utils.ts  index.ts
src/lib/components/: Chat.svelte  Grid.svelte  Notification.svelte  Player.svelte  Sidebar.svelte  Titlebar.svelte
src/lib/logic/: Chat.svelte.ts  Emotes.svelte.ts  Stream.svelte.ts  Users.svelte.ts
src/lib/state/: View.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/streams/: +page.svelte
src/routes/streams/watch/: +page.svelte
src/routes/users/: +page.svelte
src/routes/videos/: +page.svelte
src/routes/videos/watch/: +page.svelte
src/routes/view/twitch/: +page.svelte
src/routes/view/users/: +page.svelte
src/routes/view/youtube/: +page.svelte
src/routes/watch/twitch/: +page.svelte
src/routes/watch/youtube/: +page.svelte
