[package]
name = "rt"
version = "0.1.0"
description = "Twitch frontend using Tauri"
authors = ["Kyagara"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = 1
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
lazy_static = "1.5"
log = "0.4"

# api
serde_json = "1"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "query",
    "json",
    "tokio",
] }
regex = "1.11"
bytes = "1.10"
urlencoding = "2.1"
tokio = { version = "1.43", features = ["net"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false }
rustls = "0.23"

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["gzip"] }
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
