[package]
name = "rt"
version = "0.1.0"
description = "Twitch frontend using Tauri and SvelteKit"
authors = ["Kyagara"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = 1
incremental = true

[profile.release]
codegen-units = 1
lto = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
anyhow = "1.0.97"
lazy_static = "1.5.0"
log = "0.4.26"

# Local API
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.8.1", default-features = false, features = [
    "http1",
    "query",
    "tokio",
] }
regex = "1.11.1"
bytes = "1.10.1"
urlencoding = "2.1.3"
tokio = { version = "1.44.1", features = ["net"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tokio-tungstenite = { version = "0.26.2", features = [
    "rustls-tls-native-roots",
] }
futures-util = { version = "0.3.31", default-features = false }
rustls = "0.23.23"
tokio-stream = { version = "0.1.17", features = ["sync"] }

# Tauri
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-http = { version = "2.4.1", features = ["gzip", "json", "stream"] }
tauri-plugin-deep-link = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-log = "2.3.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.2.2", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.2.1"
